--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-url = jdbc:postgresql://localhost:5432/postgres
+url = jdbc:postgresql://localhost:6969/postgres
 username= postgres
-password = password
+password = postgres
