--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 url = jdbc:postgresql://localhost:5432/postgres
 username= postgres
 password = password
-jwt-secret=
+jwt-secret=YzJGc2RIbGphRzlqYjJ4aGRHVmlZV3hzY3c9PQ==
