--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,4 @@
 url = jdbc:postgresql://localhost:6969/postgres
 username= postgres
 password = postgres
+jwt-secret=YzJGc2RIbGphRzlqYjJ4aGRHVmlZV3hzY3c9PQ==
