--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-url = jdbc:postgresql://localhost:6969/postgres
+url = jdbc:postgresql://localhost:5432/postgres
 username= postgres
-password = postgres
+password = password
 jwt-secret=YzJGc2RIbGphRzlqYjJ4aGRHVmlZV3hzY3c9PQ==
